Fix Trino CLI warnings